[package]
name = "nitro-brute"
version = "0.1.0"
edition = "2018"

[dependencies]
tokio = { version = "1.13.0", default-features = false, features = ["macros", "rt-multi-thread"] }
rand = { version = "0.8.4", features = ["small_rng"] }
hyper = { version = "0.14.14", default-features = false, features = ["runtime", "stream", "http1", "client"] }
hyper-tls = "0.5.0"
futures = "0.3.17"
